cmake: remove flag for dynamic lib
Signed-off-by: Peppe289 <gsperanza204@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ enable_testing()
 set(SO_SOURCES src/error.c src/resource.c)
 add_library(so STATIC ${SO_SOURCES})
 
-target_compile_options(so PRIVATE -Wall -Wextra -fPIC)
+target_compile_options(so PRIVATE -Wall -Wextra)
 target_include_directories(so PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
